# dot-viewer

./: .gitignore  Makefile  README.md
.github/workflows/: release.yml  web.yml
DotViewer/: project.yml
DotViewer/DotViewer/: ContentView.swift  DotDocument.swift  DotParser.swift  DotViewerApp.swift  EditorView.swift  Info.plist  LineNumberGutterView.swift  PreviewView.swift
DotViewer/DotViewer.xcodeproj/: project.pbxproj
DotViewer/DotViewer/Resources/: preview.html
DotViewer/DotViewerTests/: DotDocumentDippinTests.swift  DotParserTests.swift
DotViewer/DotViewerUITests/: DotViewerScenarioTests.swift
dippin-parser/: Cargo.toml  README.md
dippin-parser/examples/: parse_and_export.rs
dippin-parser/src/: duration.rs  error.rs  export_dot.rs  ir.rs  lexer.rs  lib.rs  parser.rs  validate.rs
dippin-parser/testdata/: README.md  ask_and_execute.dot  stylesheet.dip  unicode.dip
dippin-parser/tests/: error_cases.rs  integration_tests.rs  proptest_smoke.proptest-regressions  proptest_smoke.rs  serde_feature.rs  source_map.rs
dippin-parser/tests/fixtures/: source_map_simple.dip
docs/plans/: 2026-03-09-dot-viewer-design.md  2026-03-09-dot-viewer-implementation.md  2026-03-10-wasm-viewer-design.md  2026-03-12-shared-parser-crate-design.md  2026-03-12-shared-parser-crate.md  2026-03-12-wasm-viewer-implementation.md  2026-03-16-ascii-cli-design.md  2026-03-16-ascii-cli-implementation.md  2026-04-07-dippin-api-polish.md  2026-04-07-dippin-correctness.md  2026-04-07-dippin-ux-and-tests.md  2026-04-08-dippin-full-wiring-design.md  2026-04-08-dippin-full-wiring.md
docs/plans/dippin-support/: README.md
dot-core/: Cargo.toml  build.rs  uniffi-bindgen.rs  wrapper.h
dot-core-wasm/: Cargo.toml
dot-core-wasm/src/: lib.rs
dot-core/src/: graphviz.rs  lib.rs  parser.rs
dot-core/tests/: parse_dippin.rs
dot-parser/: Cargo.toml
dot-parser/src/: lib.rs
dot-viewer-cli/: Cargo.toml
dot-viewer-cli/src/: grid.rs  main.rs  plain.rs  render.rs
dot-viewer-cli/tests/: integration.rs
scripts/: generate-bindings.sh  generate-sparkle-keys.sh
web/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
web/src/: app.d.ts  app.html
web/src/lib/: dot-language.ts  index.ts  wasm.ts
web/src/lib/components/: Editor.svelte  Preview.svelte  Toolbar.svelte  Toolbar.test.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  page.test.ts
web/tests/: app.test.ts  dippin.spec.ts
web/tests/fixtures/: sample.dip
