# ABOUTME: Cargo manifest for the dippin parser and DOT exporter crate.
# ABOUTME: Feature flags control optional serde derive macros on IR types.

[package]
name = "dippin-parser"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
indexmap = "2"

[dev-dependencies]
serde_json = "1"
