# ABOUTME: WASM build of the DOT parser for the web editor.
# ABOUTME: Uses wasm-bindgen for JS interop; parser code shared with dot-core.

[package]
name = "dot-core-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = "s"
strip = true
