# ABOUTME: WASM build of the DOT parser for the web editor.
# ABOUTME: Uses wasm-bindgen for JS interop; parser code shared with dot-core.

[package]
name = "dot-core-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
dot-parser = { path = "../dot-parser", features = ["serde"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
